--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "mysql2": "^2.3.3",
     "prettier-eslint": "^14.0.1",
     "sequelize": "^6.19.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^6.3.1",
+    "Faker": "^0.7.2"
   }
 }
