--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "sequelize": "^6.19.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^6.3.1",
-    "Faker": "^0.7.2"
+    "@faker-js/faker": "^6.3.1"
   }
 }
