--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "seeds": "node seeds/index.js",
-    "watch":"nodemon server.js",
+    "watch": "nodemon server.js",
     "bsync": "browser-sync start --proxy \"localhost:3001\" --files \"**\""
   },
   "repository": {
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Nesnah1307/blue-it#readme",
   "dependencies": {
+    "@faker-js/faker": "^6.3.1",
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.3",
     "dotenv": "^16.0.0",
@@ -28,10 +29,6 @@
     "express-handlebars": "^6.0.5",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
-    "prettier-eslint": "^14.0.1",
     "sequelize": "^6.19.0"
-  },
-  "devDependencies": {
-    "@faker-js/faker": "^6.3.1"
   }
 }
